--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.2.1",
     "core-js": "^3.6.5",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.9.0",
     "http-proxy-middleware": "^2.0.6",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
